--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
 
       <div id="loveText" class="text">
-        <p class="signature">আসসালামু আলাইকুম,</p>
+        <p class="signature">আসসালামু আলাইকুম, Salma</p>
         <p class="message">
           <p>আশা করি তুমি আমার সালাম গ্রহণ করবা</p> 
           <p>করবা এবং সালামের উত্তরটা দিবা।</p>
@@ -35,6 +35,7 @@
           
           <p>আমি তোমার উত্তরের আশায় থাকবো।</p> <p>*I LOVE YOU* ❤ </p><p>আমি তোমাকে
             অনেক ভালোবাসি।</p>
+            <p>Salma</p>
         </p>
       </div>
 
