--- a/index.html
+++ b/index.html
@@ -26,16 +26,35 @@
           <p> উপন্যাস, যাকে এই এক বছরে প্রতিটি</p> 
         <p>  দিন নতুন রূপে পড়েছি, আর মুগ্ধ</p>
 
-        <p> হয়েছি.... তুমি কি আমার আঁধার ঘরের</p>
-      <p>   আলো হবে?
- সারা জীবনের জন্য। আশা</p> 
+        <p> হয়েছি.... <br></p>
+        <p>আমার নিজেকে নিজের কাছে জাদুকর মনে হয়।</p>
+        <p> নয়তো, আমি কীভাবে তোমাকে প্রথম দেখায়</p>
+        <p>তোমার প্রেমে মুগ্ধ হয়ে গেছে। দর্য তুমি দিনের স্কির</p>
+        <p>পর দিন মুগ্ধতা ছড়াচ্ছো। আর আমি বিরক্তির</p>
+
+        <p>কারণ হওয়ার সর্বোচ্চ শিখরে পৌঁছে গিয়েছি। তবুও</p>
+
+        <p>    তুমি আমাকে বুঝতে পারছো -না আমি তোমাকে </p>
+        <p>কতটা ভালোবাসি।</p>
+          <p> তুমি কি আমার আঁধার ঘরের</p>
+      <p>   আলো হবে? সারা জীবনের জন্য। আশা</p> 
 <p> করি তুমি আমার লেখা গুলো দেখে</p>
  <p>বুঝতে পারবে,</p>
-          <p>আমি তোমাকে কতটা ভালোবাসি।</p>
+          <p class="koto">আমি তোমাকে কতটা ভালোবাসি।</p>
+          <p> আশা করি তুমি আমার প্রত্যেকটা কথার উত্তর</p>
+          <p class="koto">  অতি শীঘ্রই দেশি দিবে.
+            আমি তোমার উত্তরের</p>
+            <p > <span class="koto">আশায় থাকবো</span>
+            
+              বড় কথা হচ্ছে আমি তোমাকে এক</p>
+              <p> বছর ধরে পছন্দ করি কিংবা ভালোবাসি এই কথাটা</p>
+          <p>
+
+            তোমার সামনে গিয়ে বলার সাহস পাই নি।</p>
           
-          <p>আমি তোমার উত্তরের আশায় থাকবো।</p> <p>*I LOVE YOU* ❤ </p><p>আমি তোমাকে
+          <p>আমি তোমার উত্তরের আশায় থাকবো।</p> <p class="pink">*I LOVE YOU* S❤T </p><p class="koto">আমি তোমাকে
             অনেক ভালোবাসি।</p>
-            <p>Salma</p>
+            <p class="salma">Salma</p>
         </p>
       </div>
 
