add to text ad to color

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       </div>
 
       <div id="loveText" class="text">
-        <p class="signature">আসসালামু আলাইকুম, Salma</p>
+        <p class="signature" id="dear"> DEAR CRUSH </p>
         <p class="message">
+          <p>আসসালামু আলাইকুম,</p>
           <p>আশা করি তুমি আমার সালাম গ্রহণ করবা</p> 
-          <p>করবা এবং সালামের উত্তরটা দিবা।</p>
+          <p> এবং সালামের উত্তরটা দিবা।</p>
            <p>কেমন আছো?  আশা করি ভালো আছো। </p>
            <p>আল্লাহর রহমতে আমিও অনেক ভালো</p> 
            <p>আছি। তোমাকে একটা কথা বলার</p> 
@@ -28,8 +29,8 @@
 
         <p> হয়েছি.... <br></p>
         <p>আমার নিজেকে নিজের কাছে জাদুকর মনে হয়।</p>
-        <p> নয়তো, আমি কীভাবে তোমাকে প্রথম দেখায়</p>
-        <p>তোমার প্রেমে মুগ্ধ হয়ে গেছে। দর্য তুমি দিনের স্কির</p>
+        <p> নয়তো,<span class="koto"> আমি কীভাবে তোমাকে প্রথম দেখায়</span></p>
+        <p><span class="koto">তোমার প্রেমে মুগ্ধ হয়ে গেছে।</span>  তুমি দিনের</p>
         <p>পর দিন মুগ্ধতা ছড়াচ্ছো। আর আমি বিরক্তির</p>
 
         <p>কারণ হওয়ার সর্বোচ্চ শিখরে পৌঁছে গিয়েছি। তবুও</p>
@@ -37,7 +38,7 @@
         <p>    তুমি আমাকে বুঝতে পারছো -না আমি তোমাকে </p>
         <p>কতটা ভালোবাসি।</p>
           <p> তুমি কি আমার আঁধার ঘরের</p>
-      <p>   আলো হবে? সারা জীবনের জন্য। আশা</p> 
+      <p>   আলো হবে? <span class="koto">সারা জীবনের জন্য।</span> আশা</p> 
 <p> করি তুমি আমার লেখা গুলো দেখে</p>
  <p>বুঝতে পারবে,</p>
           <p class="koto">আমি তোমাকে কতটা ভালোবাসি।</p>
