add to color text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
           <p>আমি তোমার উত্তরের আশায় থাকবো।</p> <p class="pink">*I LOVE YOU* S❤T </p><p class="koto">আমি তোমাকে
             অনেক ভালোবাসি।</p>
             <p class="salma">Salma</p>
+            <p class="text2">*<span class="i">I</span> <span class="love">Love</span> <span class="you">For</span>  *</p>
+            <p class="text2"><span class="every"> Every</span> <span class="universe"><span class="u">U</span>niverse</span></p>
         </p>
+        
+        <div>  
+          <img src="/img/1.jpg" class="img" alt="Valentine's Image"></div>
+        
       </div>
 
       <div class="heart-container">
