--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/index.html" />
 
     <title>Valentine's Card</title>
     <link rel="stylesheet" href="index.css" />
@@ -70,6 +70,6 @@
       </div>
     </div>
 
-    <script src="cad.js"></script>
+    <script src="/cad.js"></script>
   </body>
 </html>
