--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/index.html" />
 
     <title>Valentine's Card</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="card">
@@ -61,7 +61,7 @@
         </p>
         
         <div>  
-          <img src="/img/1.jpg" class="img" alt="Valentine's Image"></div>
+          <img src="./img/1.jpg" class="img" alt="Valentine's Image"></div>
         
       </div>
 
@@ -70,6 +70,6 @@
       </div>
     </div>
 
-    <script src="/cad.js"></script>
+    <script src="./cad.js"></script>
   </body>
 </html>
